content/v1.3.0/en/api/mission-ext/MPPerkSelection.md
---
title: "MPPerkSelection"
description: "Auto-generated class reference for MPPerkSelection."
---
# MPPerkSelection

**Namespace:** TaleWorlds.MountAndBlade
**Module:** TaleWorlds.MountAndBlade
**Type:** `public class MPPerkSelection`
**Base:** none
**File:** `TaleWorlds.MountAndBlade/MPPerkSelectionManager.cs`

## Overview

`MPPerkSelection` lives in `TaleWorlds.MountAndBlade` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.MountAndBlade` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Properties

| Name | Signature |
|------|-----------|
| `Instance` | `public static MPPerkSelectionManager Instance { get; }` |

## Key Methods

### FreeInstance
`public static void FreeInstance()`

**Purpose:** **Purpose:** Executes the FreeInstance logic.

```csharp
// Static call; no instance required
MPPerkSelection.FreeInstance();
```

### InitializeForUser
`public void InitializeForUser(string username, PlayerId playerId)`

**Purpose:** **Purpose:** Prepares the resources, state, or bindings required by for user.

```csharp
// Obtain an instance of MPPerkSelection from the subsystem API first
MPPerkSelection mPPerkSelection = ...;
mPPerkSelection.InitializeForUser("example", playerId);
```

### ResetPendingChanges
`public void ResetPendingChanges()`

**Purpose:** **Purpose:** Returns pending changes to its default or initial condition.

```csharp
// Obtain an instance of MPPerkSelection from the subsystem API first
MPPerkSelection mPPerkSelection = ...;
mPPerkSelection.ResetPendingChanges();
```

### TryToApplyAndSavePendingChanges
`public void TryToApplyAndSavePendingChanges()`

**Purpose:** **Purpose:** Attempts to retrieve to apply and save pending changes, usually returning success through an out parameter.

```csharp
// Obtain an instance of MPPerkSelection from the subsystem API first
MPPerkSelection mPPerkSelection = ...;
mPPerkSelection.TryToApplyAndSavePendingChanges();
```

### GetSelectionsForHeroClass
`public List<MPPerkSelectionManager.MPPerkSelection> GetSelectionsForHeroClass(MultiplayerClassDivisions.MPHeroClass currentHeroClass)`

**Purpose:** **Purpose:** Reads and returns the selections for hero class value held by the this instance.

```csharp
// Obtain an instance of MPPerkSelection from the subsystem API first
MPPerkSelection mPPerkSelection = ...;
var result = mPPerkSelection.GetSelectionsForHeroClass(currentHeroClass);
```

### SetSelectionsForHeroClassTemporarily
`public void SetSelectionsForHeroClassTemporarily(MultiplayerClassDivisions.MPHeroClass currentHeroClass, List<MPPerkSelectionManager.MPPerkSelection> perkChoices)`

**Purpose:** **Purpose:** Assigns a new value to selections for hero class temporarily and updates the object's internal state.

```csharp
// Obtain an instance of MPPerkSelection from the subsystem API first
MPPerkSelection mPPerkSelection = ...;
mPPerkSelection.SetSelectionsForHeroClassTemporarily(currentHeroClass, perkChoices);
```

## Usage Example

```csharp
MPPerkSelection.FreeInstance();
```

## See Also

- [Area Index](../)